platform-apps/omejdn-daps/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: omejdn-daps
spec:
  selector:
    app: omejdn-daps
  ports:
    - name: http
      port: 80
      targetPort: 4567
