platform-apps/omejdn-daps/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: omejdn-daps
  namespace: infra-gateway
spec:
  parentRefs:
    - name: infra
      namespace: infra-gateway
  hostnames:
    - dil.collab-cloud.eu
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /daps
      backendRefs:
        - name: omejdn-daps
          namespace: omejdn-daps
          port: 80
    - matches:
        - path:
            type: PathPrefix
            value: /.well-known/oauth-authorization-server/daps
      backendRefs:
        - name: omejdn-daps
          namespace: omejdn-daps
          port: 80
